--- a/Notebooks/Final_cleaned_documented.ipynb
+++ b/Notebooks/Final_cleaned_documented.ipynb
@@ -93,6 +93,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# number of price column data\n",
+    "concated.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -524,7 +534,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# drop the duplicates in all rows except type column which have key values for checking duplication with keeping the first row\n",
+    "# drop the duplicates in all rows except \"type\" column which have key values for checking duplication with keeping the first row\n",
     "concated.drop_duplicates(subset=['name', 'details', 'price', 'material', 'others'], keep = 'first', inplace = True)"
    ]
   },
@@ -1689,7 +1699,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#changing the data type of price into integer\n",
+    "# changing the data type of price into integer\n",
     "data['price'] = data['price'].astype(int)"
    ]
   },
@@ -1917,39 +1927,45 @@
     "# flip the values of the others and material if the material not included in the list\n",
     "# from sklearn.preprocessing import LabelEncoder\n",
     "\n",
+    "# converts values of others  and material to lower case\n",
     "data['material'] = data['material'].str.lower()\n",
     "data['others'] = data['others'].str.lower()\n",
+    "\n",
+    "# ensure the data type is string\n",
     "data['others'] = data['others'].astype(str)\n",
     "data['material'] = data['material'].astype(str)\n",
-    "material_list=[\"soft\",\"firm\",\"medium\",\"extra\"]\n",
     "\n",
-    "data['others_ch'] =data['others']\n",
-    "data['material_ch'] =data['material']\n",
+    "material_list = [\"soft\",\"firm\",\"medium\",\"extra\"]\n",
     "\n",
-    "data['material_1'] = data.apply(lambda row: row['material'] if all(word not in material_list for word in row['material'].split()) else None, axis=1)\n",
+    "# Checks if any word in the 'material' column is not in the material list. If true, assigns the value to 'material_1'; otherwise, assigns None.\n",
+    "data['material_1'] = data.apply(lambda row: row['material'] if all(word not in material_list for word in row['material'].split()) else None, axis = 1)\n",
+    "\n",
+    "# Checks if any word in the 'others' column is in the material list. If true, assigns the value to 'material_2'; otherwise, assigns None.\n",
     "data['material_2'] = data.apply(lambda row: next((row['others'] for word in material_list if word in row['others']), None), axis=1)\n",
     "\n",
-    "\n",
+    "# Replaces the string \"None\" with actual None values in the 'material_1,2' column.\n",
     "data['material_1'] = data['material_1'].replace({\"None\": None})\n",
     "data['material_2'] = data['material_2'].replace({\"None\": None})\n",
     "data['material_1'] = data['material_1'].replace({\"none\": None})\n",
     "data['material_2'] = data['material_2'].replace({\"none\": None})\n",
     "\n",
+    "# Replaces the values in the 'others' column with values from 'material_1' column if they are not None.\n",
+    "data['others'] = data.apply(lambda row: row['material_1'] if row['material_1'] is not None else row['others'], axis = 1)\n",
     "\n",
-    "data['others'] = data.apply(lambda row: row['material_1'] if row['material_1'] is not None else row['others'], axis=1)\n",
+    "# Replaces the values in the 'material' column with values from 'material_2' column if they are not None.\n",
+    "data['material'] = data.apply(lambda row: row['material_2'] if row['material_2'] is not None else row['material'], axis = 1)\n",
     "\n",
-    "data['material'] = data.apply(lambda row: row['material_2'] if row['material_2'] is not None else row['material'], axis=1)\n",
-    "\n",
-    "data['material'] = data.apply(lambda row: row['material'] if any(word in material_list for word in row['material'].split()) else None, axis=1)\n",
+    "# Checks if any word in the 'material' column is in the material list. If true, keeps the value; otherwise, assigns None.\n",
+    "data['material'] = data.apply(lambda row: row['material'] if any(word in material_list for word in row['material'].split()) else None, axis = 1)\n",
     "\n",
     "data.loc[data[\"others\"] != \"washable cover\", \"others\"] = \"0\"\n",
     "data.loc[data[\"others\"] == \"washable cover\", \"others\"] = \"1\"\n",
     "\n",
-    "# # Initialize LabelEncoder\n",
+    "# # Initialize LabelEncoder 0,3\n",
     "# encoder = LabelEncoder()\n",
     "# data['others'] = encoder.fit_transform(data['others'])\n",
     "\n",
-    "data.rename(columns={'others': 'washable_cover'}, inplace=True)\n",
+    "data.rename(columns={'others': 'washable_cover'}, inplace = True)\n",
     "\n",
     "data = data[[\"name\", \"type\", \"price\", \"material\", \"number_of_seats\", \"colour\", \"washable_cover\"]]\n"
    ]
@@ -1973,7 +1989,7 @@
     }
    ],
    "source": [
-    "# data.fillna({'material':'undetermined'}, inplace=True)\n",
+    "# fill the missing values in material column with undetermined\n",
     "data['material'] = data['material'].fillna('undetermined')"
    ]
   },
@@ -2173,15 +2189,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv(\"final_cleaned.csv\", index=False)"
+    "data.to_csv(\"final_cleaned.csv\", index = False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
