--- a/Notebooks/Web_scraping_documented.ipynb
+++ b/Notebooks/Web_scraping_documented.ipynb
@@ -2,20 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d009b425",
+   "id": "d8bf6b53",
    "metadata": {},
    "source": [
-    "# Ikea Sofa Types Dataset"
+    "![My Image](Ikea_logo.png)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f10abbe7",
+   "cell_type": "markdown",
+   "id": "d009b425",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Picture of ikea site"
+    "# EDA on Ikea Sofa Types Dataset"
    ]
   },
   {
@@ -23,13 +21,13 @@
    "id": "6ae1d912",
    "metadata": {},
    "source": [
-    "# Description:\n",
+    "### About this Dataset:\n",
     "In this project, we are scraping data from ikea's sofa types webpages which are:<br>\n",
-    "Sofa bed<br>\n",
-    "Chaise Longue<br>\n",
-    "Modular<br>\n",
-    "Leather<br>\n",
-    "Fabric<br>\n",
+    "- Sofa bed<br>\n",
+    "- Chaise Longue<br>\n",
+    "- Modular<br>\n",
+    "- Leather<br>\n",
+    "- Fabric<br>\n",
     "to get insights about sofas' price and its relations with other columns.<br>"
    ]
   },
@@ -38,15 +36,28 @@
    "id": "5ea8f9da",
    "metadata": {},
    "source": [
-    "# Columns<br>\n",
-    "Name: Sofas' Names<br>\n",
-    "Type: Types of Sofas<br>\n",
-    "Number_of_Seats: Number of seats in each sofa<br>\n",
-    "Colour: Colour of each sofa<br>\n",
-    "Price: Price of the sofa according to colour and number of seats<br>\n",
-    "Material: Material of the sofa<br>\n",
-    "Others: Washable cover or not<br>\n",
+    "### Attributes<br>\n",
+    "- Name: Sofas' Names<br>\n",
+    "- Type: Types of Sofas<br>\n",
+    "- Number_of_Seats: Number of seats in each sofa<br>\n",
+    "- Colour: Colour of each sofa<br>\n",
+    "- Price: Price of the sofa according to colour and number of seats<br>\n",
+    "- Material: Material of the sofa<br>\n",
+    "- Others: Washable cover or not<br>\n",
     "<br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bcbac8a",
+   "metadata": {},
+   "source": [
+    "### Performing Data Cleaning and Visualisation with the below listed libraries/tools:-\n",
+    "- Pandas\n",
+    "- Numpy\n",
+    "- Matplotlib\n",
+    "- Seaborn\n",
+    "- selenium"
    ]
   },
   {
@@ -85,6 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# links to be scraped for each category\n",
     "fur_typ=[\"https://www.ikea.com/eg/en/cat/fabric-sofas-10661/?page=17\"\n",
     "        ,\"https://www.ikea.com/eg/en/cat/leather-coated-fabric-sofas-10662/?page=2\"\n",
     "        ,\"https://www.ikea.com/eg/en/cat/modular-sofas-16238/?page=8\"\n",
